# mdsa-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  SampleMD2LaTeX.config  pyproject.toml  setup.py  specacro.py  specsetup.py
generators/MagicDraw/md2LaTeX-templates/: OMGPackage.txt
md2LaTeX-templates/: OMGLaTeXStyle.txt  OMGModelSpec.txt
omgmdsa/: converttomarkdown.sh  makechangebartex.py  makechangebartex2.py  md2LaTeX.py  omg_changebar_preamble.txt  removeomgmarkup.pl  replaceUserfiles.py  specsetup.py
tests/: README.md  TestSetup.tex
tests/makechangebartexTest/: base.tex  diff.tex  diff2.tex  diff3.tex  diff4.tex  diff5.tex  diffchbr.tex  diffnoomgchbr.tex  rev.tex  subimport_base.tex  subimport_diff.tex  subimport_rev.tex
tests/makechangebartexTest/subimportDir/: NonEmpty.tex
tests/makechangebartexTest/subimportDir/innerDir/: NonEmpty.tex
tests/removeomgmarkup.pl-Test/: NonEmpty.tex  removeomgmarkup.pl-Test.tex
